--- a/css/style.scss
+++ b/css/style.scss
@@ -10,8 +10,6 @@
   padding-left: 0;
 }
 
-
-
 #instructions-and-setup {
   width: 60rem;
   > div {
@@ -29,5 +27,32 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+  }
+}
+
+#game-panel {
+  width: 50rem;
+}
+
+#the-grid {
+  width: auto;
+  display: flex;
+  flex-flow: row;
+  flex-wrap: wrap;
+
+  #MofM {
+    background-color: purple;
+  }
+  .card {
+    width: 100px;
+    height: 100px;
+    border: 2px solid white;
+    border-radius: 5%;
+    margin: 5px;
+    box-shadow: 2px 10px 39px 0px rgba(0,0,0,0.75);
+
+    img {
+      width: 100%;
+    }
   }
 }
