--- a/css/style.scss
+++ b/css/style.scss
@@ -50,6 +50,8 @@
     border-radius: 5%;
     margin: 5px;
     box-shadow: 2px 10px 39px 0px rgba(0,0,0,0.75);
+    background-image: url("../photos/card-back.png");
+    background-size: cover;
 
     img {
       width: 100%;
